// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`equipItem 1`] = `
Object {
  "payload": Object {
    "item": Object {
      "equipRegion": "tire",
      "id": "e5e5e5",
      "isEquipped": false,
      "modifiers": Array [
        Object {
          "name": "maxSpeed",
          "value": 1,
        },
      ],
      "name": "Tire",
      "tier": 3,
      "vendorId": "aaa",
    },
  },
  "type": "inventory:equipItem",
}
`;

exports[`receiveItems 1`] = `
Object {
  "payload": Object {
    "items": Array [
      Object {
        "equipRegion": "tire",
        "id": "a1a1a1",
        "isEquipped": true,
        "modifiers": Array [
          Object {
            "name": "acceleration",
            "value": 1.2,
          },
        ],
        "name": "Tire",
        "tier": 3,
        "vendorId": "aaa",
      },
      Object {
        "equipRegion": "tire",
        "id": "b2b2b2",
        "isEquipped": false,
        "modifiers": Array [
          Object {
            "name": "maxSpeed",
            "value": 0.4,
          },
        ],
        "name": "Less tired",
        "tier": 1,
        "vendorId": "bbb",
      },
    ],
  },
  "type": "inventory:receiveItems",
}
`;

exports[`selectItem 1`] = `
Object {
  "payload": Object {
    "selectedItem": Object {
      "equipRegion": "tire",
      "id": "e5e5e5",
      "isEquipped": false,
      "modifiers": Array [
        Object {
          "name": "maxSpeed",
          "value": 1,
        },
      ],
      "name": "Tire",
      "tier": 3,
      "vendorId": "aaa",
    },
  },
  "type": "inventory:selectItem",
}
`;
